# plaid-mcp-server

./: pyproject.toml
.githooks/: pre-push
docs/: index.html
scripts/: init_db.py  link_server.py  plaid_status.py  sync.py
scripts/templates/: link.html  oauth_callback.html
src/plaid_mcp/: __main__.py  client.py  credentials.py  db.py  keychain.py  recurring.py  server.py  sync.py  tools.py
tests/: test_client.py  test_credentials.py  test_db.py  test_recurring.py  test_sync.py  test_tools.py
tests/fixtures/: plaid_responses.py
